fixes alignment in benefits page

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -147,11 +147,11 @@ body, p {
 }
 
 .medUpContainer {
-  padding: 40px;
+  // padding: 40px;
 }
 
 .medUpSteps {
-  padding: 4% 8%;
+  // padding: 4% 8%;
 
   h5 {text-align: center;}
   ul {line-height: 14px;}
@@ -205,6 +205,8 @@ body, p {
     padding: 0 4%;
     line-height: 18px;
   }
+
+  h5 {text-align: center;}
 
   @media #{$large} {
     min-height: 440px;
